--- a/css/photos.css
+++ b/css/photos.css
@@ -125,4 +125,13 @@ justify-content: center;
     
     
     }
+     #Photos-container{
+
+    background:url(../img/pbg1.jpg) no-repeat center center/cover ;
+
+    z-index: -1;
+
+    opacity: 0.89;
+
+}
 }
